//
//  ecommerce_ios_swiftUITests.swift
//  ecommerce-ios-swiftUITests
//
//  Created by Mark Prichard on 11/16/15.
//  Copyright © 2015 AppDynamics. All rights reserved.
//

import XCTest

class ecommerce_ios_swiftUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        
        app.buttons["Settings"].tap()
        NSThread.sleepForTimeInterval(1)
        app.buttons["Login"].tap()
        NSThread.sleepForTimeInterval(2)
        app.buttons["Get Items"].tap()
        NSThread.sleepForTimeInterval(5)
        app.buttons["Add to Cart"].tap()
        NSThread.sleepForTimeInterval(5)
        app.buttons["Checkout"].tap()
        NSThread.sleepForTimeInterval(30)
    }
}
